# proxy

./: LICENSE  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-proxy_go  bazel-testlogs  compile_proto.sh  go.mod
cli/: BUILD.bazel  main.go
master/: BUILD.bazel  main.go
proto/: BUILD.bazel  gen.sh  ping.pb.go  ping.proto  ping_grpc.pb.go
proxy/: BUILD.bazel  main.go
proxy_python/: main.py  ping_pb2.py  ping_pb2_grpc.py
