load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "master_lib",
    srcs = ["main.go"],
    importpath = "foobar/proxy/master",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "master",
    embed = [":master_lib"],
    visibility = ["//visibility:public"],
)
